Done with all parts of the report might improve it

--- a/Report/References.bib
+++ b/Report/References.bib
@@ -1,44 +1,3 @@
-@misc{FlowScienceInc2010,
-  title={Flow 3D},
-  author={{Flow Science Inc}},
-  year={2010},
-  howpublished={\url{http://www.flow3d.com/apps/index.html}},
-  note={Accesed on 2010-10-21}
-}
-
-@misc{SINTEF2010,
-  title={The Centre for Renewable Energy},
-  author={SINTEF},
-  year={2010},
-  howpublished={\url{http://www.sintef.no/Home/Environment/fornybar-energi}},
-  note={Accesed on 2010-10-25}
-}
-
-@inbook{Sundsbo1998, 
-  place={Sunriver Oregon}, 
-  title={International Snow Science Workshop}, 
-  booktitle={Calculation of Snowdrift Around Roadside Safety Barriers}, author={Sundsbø, Per-Arne and Bang, Børre}, 
-  year={1998}, 
-  pages={279–283}
-}
-
-@phdthesis{Sundsbo1997, 
-  title={Numerical modelling and simulation of snow drift: application to snow engineering}, 
-  author={Sundsbø, Per-Arne}, 
-  year={1997},
-  note={ISBN 82-471-0047-9}
-}
-
-@inbook{Tabler1990,
-  title={Drifting snow},
-  booktitle={Cold Regions Hydrology and Hydraulics},
-  place={New York}, 
-  author={D. Tabler, Ronald and Pomeroy, John and Santana, B.W.},
-  year={1990},
-  pages={95-145},
-  publisher={American Society of Civil Engineers}
-}
-
 @book{Laksa2012, 
   title={Blending technics[sic] for Curve and Surface Constructions}, author={Laks\aa, Arne}, 
   year={2012}
@@ -52,7 +11,7 @@
   year={2018}, 
   month={Dec},
   howpublished={\url{http://mathworld.wolfram.com/HeartCurve.html}},
-  note={Accesed on 2018-12-11}
+  note={Online; Accesed on 2018-12-11}
 }
 
 @book{Schwarzkopf1997, 
@@ -63,9 +22,10 @@
 }
 
 @misc{NuEs:2016,
-  author = {Nu Es},
-  title = {Delaunay circumcircles centers.png},
+  author = {N\"{u} Es},
+  title = {Delaunay circumcircles},
   year = {2016},
   url = {\url{https://commons.wikimedia.org/w/index.php?title=File:Delaunay_circumcircles_centers.svg&oldid=205728880}},
-  note = {[Online; accessed 12-December-2018]}
+  howpublished={\url{http://mathworld.wolfram.com/HeartCurve.html}},
+  note = {[Online; Accessed 2018-12-12]}
 }
