Added abstract and changed title

--- a/Report/ReportTemplate.tex
+++ b/Report/ReportTemplate.tex
@@ -112,7 +112,7 @@
 }
 \pagestyle{fancy}
 \fancyhf{}
-\chead{\footnotesize D.A. Salwerowicz, From B-Spline to GERBS Surface, curve manipulation and special effects}
+\chead{\footnotesize D.A. Salwerowicz, From B-Spline to GERBS Curve and Surface, affine transformations as special effects}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 \setlength{\headheight}{20pt}
 \setlength{\footskip}{20pt}
@@ -142,8 +142,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%      Title, Author, and Date      %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{From Simple B-Spline to GERBS Surface, or How I Stopped Sleeping and Learned to Hate My Life}
-\author{D. A. Salwerowicz}
+\title{From B-Spline to GERBS Curve and Surface, affine transformations as special effects}
+\author{D. A. Salwerowicz (dsa014)}
 \date{\parbox{\linewidth}{\centering
     \textit{\small UiT - The Arctic University of Norway, P.O. Box 385, N-8505 Narvik, Norway}\endgraf\bigskip
     \small Submitted \today
@@ -165,7 +165,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \noindent\rule{\linewidth}{.5pt}
 \begin{abstract} 
-\verb|//TODO|
+The project I worked revolved around implementing GERBS Curves and Surfaces as well as animating them using affine transformations. This report describes necessary theory for understanding GERBS curves and surfaces as well as how they were implemented in GMlib and C++.
 
 \keywords{Parametric Curves; B-Splines; Curve Blending; GERBS}
 \end{abstract}
@@ -496,7 +496,7 @@ One of the possible further developments might be to extend the functionality of
 
 I am overall very satisfied with both the result of my project and what I have learned about computer graphics and geometry during this course. GERBS curves are not a really well explored subject and most of the papers regarding them talk about practical use of them, not so much about implementation of them from scratch. I personally think that in a few years time with better computing resources and understanding of them GERBS curves might replace B-Splines as the industry standard or at least become a tempting alternative to them.
 
-Lastly a video showing my program in action can be found here: \url{https://youtu.be/j-YXZdhYR0E}
+Lastly a video showing my program in action can be found here: \url{https://youtu.be/j-YXZdhYR0E}, and repository with my code can be found here: \url{https://source.coderefinery.org/MormonJesus69420/STE6247-Applied-Geometry-And-Special-Effects}.
 
 \section{Acknowledgements}
 I would like to thank Christopher Hagerup cha113, Victor Lindb\"{a}ck hli039, Olav Larseng ola014, Kent Larsen kla096, for cooperating on both this report and the project itself.
